--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -34,16 +34,10 @@ button.ant-btn.ant-btn-primary.ant-input-search-button {
   border-bottom-right-radius: 100px;
 }
 
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected,
-.ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
+.ant-menu {
   border-color: var(--color-primary) !important;
-  color: var(--color-primary);
+  color: var(--color-primary) !important;
+  background-color: var(--background-color-app);
 }
 .ant-menu-horizontal > .ant-menu-item-selected a {
   background: var(--color-app);
