--- a/client/src/css/theme.css
+++ b/client/src/css/theme.css
@@ -34,6 +34,7 @@
   --background-color-tertiary: rgba(0, 0, 0, 0.2);
 
   --border: 3px solid #ffffff;
+  --border-color: #ffffffe0;
   --border-radius-primary: 20px;
   --border-radius-secondary: 15px;
 
@@ -83,27 +84,24 @@
   }
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --color-app: #ffffff;
 
-    --color-gradient: #444444;
+    --color-gradient: #333333;
 
-    --background-color-app: #1f1f1f;
-    --background-color-primary: #000000;
+    --background-color-app: #333333;
+    --background-color-primary: #181818;
     --background-color-secondary: rgba(255, 255, 255, 0.178);
+    --background-color-tertiary: rgba(0, 0, 0, 0.2);
 
-    --border-radius-primary: 10px;
-    --border-radius-secondary: 8px;
+    --border: 3px solid #353535;
+    --border-color: #353535;
 
-    --drop-shadow: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.5));
+    --drop-shadow-dark: 0px 5px 20px rgb(0, 0, 0);
+    --drop-shadow: 0px 5px 20px rgba(0, 0, 0, 0.6);
+    --inner-shadow: inset 0px 1px 5px rgb(0, 0, 0);
+
+    
   }
-
-  .thumbnail {
-    filter: brightness(0.8) contrast(1.2);
-  }
-
-  .portfolio-hero-media {
-    filter: brightness(0.8) contrast(1.2);
-  }
-} */
+}
